# iclr-osc-22

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTES.md  README.md  environment.yaml  pyproject.toml  setup.cfg  train.py
conf/: train.yaml
configs/: train.yaml
configs/data/: clevr10.yaml  overfit.yaml
configs/exp/: debug.yaml  overfit.yaml
configs/logging/: wandb.yaml
configs/losses/: more_global.yaml  more_objects.yaml  zero_objects.yaml
configs/lr_scheduler/: linear1_cosine4.yaml  linear1_cosine4_x10.yaml  linear1_cosine4_x2.yaml  linear1_cosine4_x20.yaml  linear1_cosine4_x5.yaml
configs/model/: bb_global.yaml  bb_obj_global.yaml  common.yaml  vit_common.yaml  vit_global.yaml  vit_global_obj.yaml  vit_obj_global.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/overfit/: overfit.yaml
docs/: .buildinfo  .gitignore  README.md  autosummary.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_autosummary/: osc.html  (+153 more)
notebooks/: 00-LrSchedulers.ipynb  01-ContrastiveLossGlobal.ipynb  02-DatasetTests.ipynb  03-MatchingContrastiveLoss.ipynb  04-KMeans.ipynb  05-MatchingStrategiesAndContrastiveNegatives.ipynb  06-Segmentation.ipynb  07-LinearVQA.ipynb  08-Runs.ipynb  10-SwinTransformerExploration.ipynb  11-NormalizationFunctions.ipynb  12-TensorFlowDatasets.ipynb  13-TensorFlowDatasetsPart2.ipynb  15-OtsuThresholdingPytorch.ipynb  16-ReciprocalNearestNeighbors.ipynb  17-ClevrVQADataset.ipynb  scratch.ipynb
tests/: test_my_vit.py  test_random_resized_crop.py  test_utils.py
(+274 files in other folders)
