[metadata]
name = osc
version = 0.0.1
author = Federico Baldassarre
description = OSC project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baldassarreFe/iclr-osc-22
project_urls =
    Bug Tracker = https://github.com/baldassarreFe/iclr-osc-22/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
